# applyd

./: .gitignore  README.md
client/: .env.example  .gitignore  package-lock.json  package.json  proxy.ts
client/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
client/app/dashboard/: page.tsx
client/components/: providers.tsx
client/components/dashboard/: add-job-modal.tsx  badges.tsx  bulk-action-bar.tsx  dashboard-navbar.tsx  dashboard-shell.tsx  job-detail-modal.tsx  jobs-table.tsx  stat-cards.tsx  toolbar.tsx  types.ts
client/components/landing/: features-grid.tsx  google-logo.tsx  google-sign-in-button.tsx  hero.tsx
client/components/layout/: footer.tsx  navbar.tsx
server/: .gitignore  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 67a524b6255a_initial_tables.py
server/src/: config.py  database.py  dependencies.py  main.py  scheduler.py
server/src/auth/: exceptions.py  router.py  schemas.py  service.py
server/src/dashboard/: router.py  schemas.py  service.py
server/src/jobs/: excel.py  exceptions.py  router.py  schemas.py  service.py
server/src/models/: __init__.py  job.py  job_note.py  reminder.py  user.py
server/src/notes/: exceptions.py  router.py  schemas.py  service.py
server/src/reminders/: email.py  exceptions.py  router.py  schemas.py  service.py
server/tests/: conftest.py
server/tests/auth/: test_auth.py
server/tests/dashboard/: test_dashboard.py
server/tests/jobs/: test_jobs.py
server/tests/notes/: test_notes.py
server/tests/reminders/: test_reminders.py
(+1 files in other folders)
