[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.10.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "google-auth[requests]>=2.0.0",
    "PyJWT>=2.8.0",
    "pydantic-settings>=2.14.0",
    "resend>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
